[gd_scene load_steps=5 format=3 uid="uid://c4wtma14pt5uv"]

[ext_resource type="Script" path="res://components/PlaybackRow/PlaybackRow.gd" id="1_8pl2j"]
[ext_resource type="PackedScene" uid="uid://c2c3t6jriymr6" path="res://components/TriggerButton/TriggerButton.tscn" id="2_077sc"]
[ext_resource type="PackedScene" uid="uid://d3reasl3xdl4l" path="res://components/TriggerSlider/TriggerSlider.tscn" id="3_rjcn8"]

[sub_resource type="LabelSettings" id="LabelSettings_snrau"]
font_size = 13

[node name="Playback Row" type="MarginContainer"]
offset_right = 96.0
offset_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_8pl2j")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_snrau")
horizontal_alignment = 1

[node name="Button1" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_077sc")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
toggle_mode = false

[node name="Button2" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_077sc")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
toggle_mode = false

[node name="Button3" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_077sc")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_vertical = 1
toggle_mode = false

[node name="Slider" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_rjcn8")]
layout_mode = 2

[node name="Button4" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_077sc")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_vertical = 1
toggle_mode = false

[node name="Button5" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_077sc")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
toggle_mode = false
